    nonexisting "dh_installinit --sysvinit-only" option than the previous
    creation of the upstart file with an ubuntu specific dpatch.
  * debian/patches/, debian/rules, debian/control, debian/source/format: Move
    to source format "3.0 (quilt)" and convert our dpatches to quilt patches.
    Drop dpatch build dependency.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Sat,  9 Jul 2011 16:18:11 +0200

cups (1.4.6-11) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/cups-avahi.dpatch: Updated Avahi patch to fix places in
    the CUPS source code where libdns_sd is supported but not Avahi.
    especially accept being called with a hostname with ".local" domain
    so that AirPrint works without "ServerAlias *" in cupsd.conf (LP: #801306).

  [ Steve Langasek ]
  * Build for multiarch. (Closes: #631425)

 -- Martin Pitt <mpitt@debian.org>  Tue, 28 Jun 2011 18:03:26 +0100

cups (1.4.6-10) unstable; urgency=low

  * debian/patches/cups-avahi.dpatch: Updated Avahi patch so that it
    generates the DNS-SD service names also correctly if there is a very
    long server name. Before it could crash if the server name was longer than
    AVAHI_LABEL_MAX - 4 (60) characters (LP: #793265).

 -- Till Kamppeter <till.kamppeter@gmail.com>  Thu, 16 Jun 2011 19:09:11 +0200

cups (1.4.6-9) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/usb-backend-accept-old-usblp-uris.dpatch: Fixed bugs in
    the patch which got introduced by the upstream clean-up and by the fix
    of a potential segfault.
  * debian/patches/usb-backend-accept-old-usblp-uris.dpatch:
    Patch got accepted upstream, replaced it by the version from
    the upstream trunk (1.5.x).

  [ Martin Pitt ]
  * debian/cups.postinst: Quiesce errors from rmmod. (Closes: #630109)

 -- Martin Pitt <mpitt@debian.org>  Wed, 15 Jun 2011 06:39:52 +0200

cups (1.4.6-8) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/usb-backend-accept-old-usblp-uris.dpatch: Let the