@@ -5,7 +5,7 @@ Maintainer: Debian CUPS Maintainers <pkg-cups-devel@lists.alioth.debian.org>
 Standards-Version: 3.9.2
 Build-Depends: libpam0g-dev, libtiff4-dev, libjpeg-dev, zlib1g-dev,
  libpng12-dev, libslp-dev, libgnutls-dev, libpaper-dev, libldap2-dev,
- debhelper (>= 8.1.3), po-debconf, cdbs (>= 0.4.93), sharutils, 
+ debhelper (>= 8.1.3), patch, po-debconf, cdbs (>= 0.4.93), sharutils, 
  libdbus-1-dev, libkrb5-dev | heimdal-dev,
  libavahi-compat-libdnssd-dev, libavahi-common-dev, libavahi-client-dev,
  libpoppler-dev (>= 0.12.2-2), pkg-config,
